kubernetes/maildev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maildev
  namespace: wp-manager
  labels:
    app: maildev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maildev
  template:
    metadata:
      labels:
        app: maildev
    spec:
      containers:
        - name: maildev
          image: maildev/maildev
